Upgrade a bunch of things

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,21 @@
 [versions]
-accompanist = "0.24.2-alpha"
-activityCompose = "1.5.0-alpha03"
-androidxTest = "1.4.1-alpha04"
-androidxTestExt = "1.1.4-alpha04"
+accompanist = "0.24.6-alpha"
+activityCompose = "1.5.0-alpha05"
+androidxTest = "1.4.1-alpha05"
+androidxTestExtJUnit = "1.1.4-alpha05"
+androidxTestOrchestrator = "1.4.2-alpha02"
 androidxTestServices = "1.4.1"
 appCompat = "1.4.1"
 assertk = "0.25"
-coil = "2.0.0-alpha09"
-compose = "1.2.0-alpha04"
-composeMaterial2 = "1.2.0-alpha04"
-composeMaterial3 = "1.0.0-alpha06"
-composeRuntimeLivedata = "1.2.0-alpha04"
+coil = "2.0.0-rc03"
+compose = "1.2.0-alpha07"
+composeMaterial3 = "1.0.0-alpha09"
 composeUiTestJUnit4 = "1.1.1"
-composeUiTestManifest = "1.2.0-alpha04"
-composeUiTooling = "1.2.0-alpha04"
 daggerHilt = "2.40.5"
 datastore = "1.0.0"
 desugar = "1.1.5"
-espresso-core = "3.5.0-alpha04"
-firebaseBom = "29.1.0"
+espresso-core = "3.5.0-alpha05"
+firebaseBom = "29.3.0"
 glance = "1.0.0-alpha03"
 gradlePlugins-agp = "7.3.0-alpha08"
 gradlePlugins-crashlytics = "2.8.1"
@@ -30,20 +27,19 @@ gradlePlugins-kotlinter = "3.9.0"
 gradlePlugins-ksp = "1.6.10-1.0.4"
 gradlePlugins-protobuf = "0.8.18"
 gradlePlugins-shot = "5.13.0"
-gradlePlugins-versionCatalog = "0.3.0"
+gradlePlugins-versionCatalog = "0.3.1"
 gradlePlugins-versionsBenManes = "0.42.0"
 hilt = "1.0.0"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
 hiltNavigationCompose = "1.0.0"
 junit = "5.8.2"
 kotlin = "1.6.10"
-kotlinCoroutines = "1.6.0"
-lifecycle = "2.5.0-alpha03"
-lifecycleViewmodelCompose = "2.5.0-alpha03"
-navigationCompose = "2.5.0-alpha03"
-protobuf = "3.19.4"
-room = "2.4.2"
-splashscreen = "1.0.0-beta01"
+kotlinxCoroutinesTest = "1.6.1"
+lifecycle = "2.5.0-alpha06"
+navigationCompose = "2.5.0-alpha04"
+protobuf = "3.20.0"
+room = "2.5.0-alpha01"
+splashscreen = "1.0.0-beta02"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
@@ -52,15 +48,15 @@ androidx-activity-activityCompose = { module = "androidx.activity:activity-compo
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose" }
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "composeMaterial2" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
-androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterial2" }
-androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeRuntimeLivedata" }
+androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "composeUiTestJUnit4" }
-androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
-androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
-androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
+androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
@@ -69,15 +65,15 @@ androidx-hilt-hiltCompiler = { module = "androidx.hilt:hilt-compiler", version.r
 androidx-hilt-hiltLifecycleViewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
 androidx-hilt-hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-lifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-lifecycleViewmodelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-lifecycle-lifecycleViewmodelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 androidx-navigation-navigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
-androidx-test-orchestrator = { module = "androidx.test:orchestrator", version = "1.4.2-alpha01" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExtJUnit" }
+androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidxTestOrchestrator" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTest" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
@@ -99,7 +95,7 @@ google-protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", v
 jakes-timber-timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinCoroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 
 [bundles]
 accompanist = ["google-accompanistFlowLayout", "google-accompanistNavAnimations", "google-accompanistNavMaterial", "google-accompanistSystemUIController"]
