Upgrade dependencies, fix warnings

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 accompanist = "0.24.7-alpha"
 activityCompose = "1.5.0-alpha05"
-androidxTest = "1.4.1-alpha05"
-androidxTestExtJUnit = "1.1.4-alpha05"
-androidxTestOrchestrator = "1.4.2-alpha02"
+androidxTest = "1.4.1-alpha06"
+androidxTestExtJUnit = "1.1.4-alpha06"
+androidxTestOrchestrator = "1.4.2-alpha03"
 androidxTestServices = "1.4.1"
 appCompat = "1.4.1"
 assertk = "0.25"
@@ -14,19 +14,19 @@ composeUiTestJUnit4 = "1.1.1"
 daggerHilt = "2.40.5"
 datastore = "1.0.0"
 desugar = "1.1.5"
-espresso-core = "3.5.0-alpha05"
-firebaseBom = "29.3.0"
+espresso-core = "3.5.0-alpha06"
+firebaseBom = "30.0.0"
 glance = "1.0.0-alpha03"
 gradlePlugins-agp = "7.3.0-alpha09"
 gradlePlugins-crashlytics = "2.8.1"
-gradlePlugins-detekt = "1.19.0"
+gradlePlugins-detekt = "1.20.0"
 gradlePlugins-gms = "4.3.5"
 gradlePlugins-hilt = "2.40.5"
 gradlePlugins-junit5 = "1.8.2.0"
-gradlePlugins-kotlinter = "3.9.0"
+gradlePlugins-kotlinter = "3.10.0"
 gradlePlugins-ksp = "1.6.20-1.0.5"
 gradlePlugins-protobuf = "0.8.18"
-gradlePlugins-shot = "5.13.0"
+gradlePlugins-shot = "5.14.0"
 gradlePlugins-versionCatalog = "0.3.1"
 gradlePlugins-versionsBenManes = "0.42.0"
 hilt = "1.0.0"
@@ -35,8 +35,8 @@ hiltNavigationCompose = "1.0.0"
 junit = "5.8.2"
 kotlin = "1.6.20"
 kotlinxCoroutinesTest = "1.6.1"
-lifecycle = "2.5.0-alpha06"
-navigationCompose = "2.5.0-alpha04"
+lifecycle = "2.5.0-beta01"
+navigationCompose = "2.5.0-beta01"
 protobuf = "3.20.1"
 room = "2.5.0-alpha01"
 splashscreen = "1.0.0-beta02"
