Upgrade several dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-accompanist = "0.24.7-alpha"
+accompanist = "0.24.8-beta"
 activityCompose = "1.5.0-alpha05"
 androidxTest = "1.4.1-alpha06"
 androidxTestExtJUnit = "1.1.4-alpha06"
@@ -7,9 +7,9 @@ androidxTestOrchestrator = "1.4.2-alpha03"
 androidxTestServices = "1.4.1"
 appCompat = "1.4.1"
 assertk = "0.25"
-coil = "2.0.0-rc03"
-compose = "1.2.0-alpha08"
-composeMaterial3 = "1.0.0-alpha10"
+coil = "2.0.0"
+compose = "1.2.0-beta01"
+composeMaterial3 = "1.0.0-alpha11"
 composeUiTestJUnit4 = "1.1.1"
 daggerHilt = "2.41"
 datastore = "1.0.0"
@@ -24,7 +24,7 @@ gradlePlugins-gms = "4.3.5"
 gradlePlugins-hilt = "2.40.5"
 gradlePlugins-junit5 = "1.8.2.0"
 gradlePlugins-kotlinter = "3.10.0"
-gradlePlugins-ksp = "1.6.20-1.0.5"
+gradlePlugins-ksp = "1.6.21-1.0.5"
 gradlePlugins-protobuf = "0.8.18"
 gradlePlugins-shot = "5.14.0"
 gradlePlugins-versionCatalog = "0.3.1"
@@ -33,9 +33,9 @@ hilt = "1.0.0"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
 hiltNavigationCompose = "1.0.0"
 junit = "5.8.2"
-kotlin = "1.6.20"
+kotlin = "1.6.21"
 kotlinxCoroutinesTest = "1.6.1"
-lifecycle = "2.5.0-beta01"
+lifecycle = "2.5.0-rc01"
 navigationCompose = "2.5.0-beta01"
 protobuf = "3.20.1"
 room = "2.5.0-alpha01"
