Upgrade dagger and navigation-compose
We still can't upgrade the Hilt and GMS plugins, as they break the build

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ coil = "2.0.0"
 compose = "1.2.0-beta01"
 composeMaterial3 = "1.0.0-alpha11"
 composeUiTestJUnit4 = "1.1.1"
-daggerHilt = "2.41"
+daggerHilt = "2.42"
 datastore = "1.0.0"
 desugar = "1.1.5"
 espresso-core = "3.5.0-alpha06"
@@ -36,7 +36,7 @@ junit = "5.8.2"
 kotlin = "1.6.21"
 kotlinxCoroutinesTest = "1.6.1"
 lifecycle = "2.5.0-rc01"
-navigationCompose = "2.5.0-beta01"
+navigationCompose = "2.5.0-rc01"
 protobuf = "3.20.1"
 room = "2.5.0-alpha01"
 splashscreen = "1.0.0-beta02"
