--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,45 +1,44 @@
 [versions]
-accompanist = "0.24.13-rc"
-activityCompose = "1.6.0-alpha05"
-androidxTest = "1.5.0-alpha01"
+accompanist = "0.26.2-beta"
+activityCompose = "1.6.0-rc01"
+androidxTest = "1.5.0-alpha02"
 androidxTestExtJUnit = "1.1.4-alpha07"
 androidxTestOrchestrator = "1.4.2-alpha04"
 androidxTestRules = "1.4.1-alpha07"
 androidxTestServices = "1.4.1"
-appCompat = "1.4.2"
+appCompat = "1.5.0"
 assertk = "0.25"
-coil = "2.1.0"
-compose = "1.3.0-alpha01"
-composeCompiler = "1.3.0-beta01"
-composeMaterial3 = "1.0.0-alpha14"
-composeUiTestJUnit4 = "1.1.1"
-daggerHilt = "2.43"
+coil = "2.2.0"
+compose = "1.3.0-beta01"
+composeMaterial3 = "1.0.0-beta01"
+composeUiTestJUnit4 = "1.2.1"
+daggerHilt = "2.43.2"
 datastore = "1.0.0"
-desugar = "1.2.0"
+desugar = "1.2.2"
 espresso-core = "3.5.0-alpha07"
-firebaseBom = "30.3.1"
-glance = "1.0.0-alpha03"
-gradlePlugins-agp = "7.4.0-alpha08"
+firebaseBom = "30.3.2"
+glance = "1.0.0-alpha04"
+gradlePlugins-agp = "7.4.0-alpha10"
 gradlePlugins-crashlytics = "2.9.1"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.13"
-gradlePlugins-hilt = "2.43"
+gradlePlugins-hilt = "2.43.2"
 gradlePlugins-junit5 = "1.8.2.1"
 gradlePlugins-kotlinter = "3.11.1"
 gradlePlugins-ksp = "1.7.10-1.0.6"
 gradlePlugins-protobuf = "0.8.19"
 gradlePlugins-shot = "5.14.1"
-gradlePlugins-versionCatalog = "0.5.1"
+gradlePlugins-versionCatalog = "0.6.1"
 gradlePlugins-versionsBenManes = "0.42.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
-junit = "5.8.2"
+junit = "5.9.0"
 kotlin = "1.7.10"
 kotlinxCoroutinesTest = "1.6.4"
 lifecycle = "2.6.0-alpha01"
-navigationCompose = "2.5.0"
-protobuf = "3.21.3"
-room = "2.5.0-alpha02"
+navigationCompose = "2.5.1"
+protobuf = "3.21.5"
+room = "2.5.0-alpha03"
 splashscreen = "1.0.0-rc01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
@@ -98,17 +97,63 @@ junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", vers
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 
 [bundles]
-accompanist = ["google-accompanistFlowLayout", "google-accompanistNavAnimations", "google-accompanistNavMaterial", "google-accompanistSystemUIController"]
-androidxTestUtils = ["androidx-test-orchestrator", "androidx-test-services"]
-compose = ["androidx-compose-foundation", "androidx-compose-material", "androidx-compose-material3", "androidx-compose-material3WindowSizeClass", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui"]
-composeTest = ["androidx-compose-ui-uiTest-junit4", "androidx-compose-ui-uiTest-manifest", "androidx-test-core", "androidx-test-espresso-core", "androidx-test-ext-junit", "androidx-test-rules"]
-composeUiTooling = ["androidx-compose-ui-uiTooling", "androidx-compose-ui-uiTooling-preview"]
-datastore = ["androidx-datastore", "google-protobuf-javalite"]
-firebase = ["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
-hilt = ["androidx-hilt-hiltCommon", "google-dagger-dagger", "google-dagger-hiltAndroid"]
-hiltKapt = ["androidx-hilt-hiltCompiler", "google-dagger-daggerCompiler", "google-dagger-hiltCompiler"]
-lifecycle = ["androidx-lifecycle-lifecycleRuntimeKtx", "androidx-lifecycle-lifecycleViewmodelCompose"]
-room = ["androidx-room-roomKtx", "androidx-room-roomRuntime"]
+accompanist = [
+    "google-accompanistFlowLayout",
+    "google-accompanistNavAnimations",
+    "google-accompanistNavMaterial",
+    "google-accompanistSystemUIController",
+]
+androidxTestUtils = [
+    "androidx-test-orchestrator",
+    "androidx-test-services",
+]
+compose = [
+    "androidx-compose-foundation",
+    "androidx-compose-material",
+    "androidx-compose-material3",
+    "androidx-compose-material3WindowSizeClass",
+    "androidx-compose-materialIconsExtended",
+    "androidx-compose-runtimeLivedata",
+    "androidx-compose-ui",
+]
+composeTest = [
+    "androidx-compose-ui-uiTest-junit4",
+    "androidx-compose-ui-uiTest-manifest",
+    "androidx-test-core",
+    "androidx-test-espresso-core",
+    "androidx-test-ext-junit",
+    "androidx-test-rules",
+]
+composeUiTooling = [
+    "androidx-compose-ui-uiTooling",
+    "androidx-compose-ui-uiTooling-preview",
+]
+datastore = [
+    "androidx-datastore",
+    "google-protobuf-javalite",
+]
+firebase = [
+    "google-firebase-analytics-ktx",
+    "google-firebase-crashlytics-ktx",
+]
+hilt = [
+    "androidx-hilt-hiltCommon",
+    "google-dagger-dagger",
+    "google-dagger-hiltAndroid",
+]
+hiltKapt = [
+    "androidx-hilt-hiltCompiler",
+    "google-dagger-daggerCompiler",
+    "google-dagger-hiltCompiler",
+]
+lifecycle = [
+    "androidx-lifecycle-lifecycleRuntimeKtx",
+    "androidx-lifecycle-lifecycleViewmodelCompose",
+]
+room = [
+    "androidx-room-roomKtx",
+    "androidx-room-roomRuntime",
+]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradlePlugins-agp" }
