--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,147 @@
-# Built application files
-*.apk
-*.ap_
+## Seb's .gitignore template
+# You can find the most up-to-date version at https://go.sebastiano.dev/gitignore
+# Partly based on templates by https://plugins.jetbrains.com/plugin/7495--ignore
 
-# Files for the Dalvik VM
-*.dex
+### Windows template
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-# Java class files
-*.class
+# Dump file
+*.stackdump
 
-# Generated files
-bin/
-gen/
+# Folder config file
+[Dd]esktop.ini
 
-# Gradle files
-.gradle/
-build/
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Local configuration file (sdk path, etc)
-local.properties
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-# Log Files
-*.log
+# Windows shortcuts
+*.lnk
 
-# IDEA/Android Studio ignores
+### macOS template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### Linux template
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
 *.iml
 *.ipr
 *.iws
 /.idea/*
 
-# IDEA/Android Studio Ignore exceptions
-!/.idea/vcs.xml
-!/.idea/fileTemplates/
-!/.idea/inspectionProfiles/
-!/.idea/scopes/
-!/.idea/codeStyles
-!/.idea/runConfigurations
-!/.idea/.name
-!/.idea/encodings.xml
-!/.idea/copyright/
-!/.idea/compiler.xml
+# Exclude non-user-specific stuff
+!.idea/.name
+!.idea/codeInsightSettings.xml
+!.idea/codeStyles/
+!.idea/copyright/
+!.idea/dataSources.xml
+!.idea/detekt.xml
+!.idea/encodings.xml
+!.idea/externalDependencies.xml
+!.idea/file.template.settings.xml
+!.idea/fileTemplates/
+!.idea/icon.svg
+!.idea/inspectionProfiles/
+!.idea/runConfigurations/
+!.idea/scopes/
+!.idea/vcs.xml
 
-# OSX
-*.DS_Store
+### Kotlin template
+# Compiled class file
+*.class
 
-# Heap dump captures
-captures/
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Gradle template
+.gradle
+build/
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle/wrapper/gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+### Android-specific stuff
+# Built application files
+*.apk
+*.ap_
+*.aab
+*.apks
+
+# Files for the Dalvik VM
+*.dex
+
+# Generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
 
 # Google/Firebase secrets
-/app/google-services.json
+google-services.json
