--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ desugar = "1.2.2"
 espresso-core = "3.5.0-alpha07"
 firebaseBom = "30.3.2"
 glance = "1.0.0-alpha04"
-gradlePlugins-agp = "7.4.0-alpha10"
+gradlePlugins-agp = "7.4.0-beta01"
 gradlePlugins-crashlytics = "2.9.1"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.13"
