--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ assertk = "0.25"
 coil = "2.2.0"
 compose = "1.3.0-beta01"
 composeCompiler = "1.3.0-beta01"
-composeMaterial3 = "1.0.0-beta01"
+composeMaterial3 = "1.0.0-beta03"
 composeUiTestJUnit4 = "1.2.1"
 daggerHilt = "2.43.2"
 datastore = "1.0.0"
@@ -19,7 +19,7 @@ desugar = "1.2.2"
 espresso-core = "3.5.0-alpha07"
 firebaseBom = "30.3.2"
 glance = "1.0.0-alpha04"
-gradlePlugins-agp = "7.4.0-beta01"
+gradlePlugins-agp = "8.0.0-alpha02"
 gradlePlugins-crashlytics = "2.9.1"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.13"
@@ -89,6 +89,8 @@ google-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "dag
 google-dagger-daggerCompiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerHilt" }
 google-dagger-hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "daggerHilt" }
 google-dagger-hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
+google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version = "0.2.1" }
+google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version = "0.2.1" }
 google-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
