--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,45 +1,46 @@
 [versions]
-accompanist = "0.26.2-beta"
-activityCompose = "1.6.0-rc01"
-androidxTest = "1.5.0-alpha02"
-androidxTestExtJUnit = "1.1.4-alpha07"
-androidxTestOrchestrator = "1.4.2-alpha04"
-androidxTestRules = "1.4.1-alpha07"
-androidxTestServices = "1.4.1"
-appCompat = "1.5.0"
+accompanist = "0.27.0"
+activityCompose = "1.7.0-alpha02"
+androidxTest = "1.5.0"
+androidxTestExtJUnit = "1.1.4"
+androidxTestOrchestrator = "1.4.2"
+androidxTestRules = "1.5.0"
+androidxTestServices = "1.4.2"
+appCompat = "1.5.1"
 assertk = "0.25"
-coil = "2.2.0"
-compose = "1.3.0-beta01"
+coil = "2.2.2"
+compose = "1.3.1"
 composeCompiler = "1.3.0-beta01"
-composeMaterial3 = "1.0.0-beta03"
-composeUiTestJUnit4 = "1.2.1"
+composeMaterial3 = "1.1.0-alpha02"
+composeUiTestJUnit4 = "1.3.1"
 daggerHilt = "2.43.2"
 datastore = "1.0.0"
-desugar = "1.2.2"
-espresso-core = "3.5.0-alpha07"
-firebaseBom = "30.3.2"
-glance = "1.0.0-alpha04"
-gradlePlugins-agp = "8.0.0-alpha02"
-gradlePlugins-crashlytics = "2.9.1"
+desugar = "2.0.0"
+espresso-core = "3.5.0"
+firebaseBom = "31.0.2"
+glance = "1.0.0-alpha05"
+glance-tools = "0.2.2"
+gradlePlugins-agp = "8.0.0-alpha08"
+gradlePlugins-crashlytics = "2.9.2"
 gradlePlugins-detekt = "1.21.0"
-gradlePlugins-gms = "4.3.13"
+gradlePlugins-gms = "4.3.14"
 gradlePlugins-hilt = "2.43.2"
 gradlePlugins-junit5 = "1.8.2.1"
-gradlePlugins-kotlinter = "3.11.1"
+gradlePlugins-kotlinter = "3.12.0"
 gradlePlugins-ksp = "1.7.10-1.0.6"
-gradlePlugins-protobuf = "0.8.19"
+gradlePlugins-protobuf = "0.9.1"
 gradlePlugins-shot = "5.14.1"
-gradlePlugins-versionCatalog = "0.6.1"
-gradlePlugins-versionsBenManes = "0.42.0"
+gradlePlugins-versionCatalog = "0.7.0"
+gradlePlugins-versionsBenManes = "0.43.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
-junit = "5.9.0"
+junit = "5.9.1"
 kotlin = "1.7.10"
 kotlinxCoroutinesTest = "1.6.4"
-lifecycle = "2.6.0-alpha01"
-navigationCompose = "2.5.1"
-protobuf = "3.21.5"
-room = "2.5.0-alpha03"
+lifecycle = "2.6.0-alpha03"
+navigationCompose = "2.5.3"
+protobuf = "3.21.9"
+room = "2.5.0-beta02"
 splashscreen = "1.0.0-rc01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
@@ -89,8 +90,8 @@ google-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "dag
 google-dagger-daggerCompiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerHilt" }
 google-dagger-hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "daggerHilt" }
 google-dagger-hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
-google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version = "0.2.1" }
-google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version = "0.2.1" }
+google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version.ref = "glance-tools" }
+google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version.ref = "glance-tools" }
 google-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
