--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ appCompat = "1.5.1"
 assertk = "0.25"
 coil = "2.2.2"
 compose = "1.3.1"
-composeCompiler = "1.3.0-beta01"
+composeCompiler = "1.3.1"
 composeMaterial3 = "1.1.0-alpha02"
 composeUiTestJUnit4 = "1.3.1"
 daggerHilt = "2.43.2"
