--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:sharedUserId="dev.sebastiano.bundel.uid"
-    android:sharedUserMaxSdkVersion="32">
+    android:sharedUserMaxSdkVersion="32"
+    tools:targetApi="tiramisu">
 
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
