--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ appCompat = "1.5.1"
 assertk = "0.25"
 coil = "2.2.2"
 compose = "1.3.1"
-composeCompiler = "1.3.1"
+composeCompiler = "1.3.2"
 composeMaterial3 = "1.1.0-alpha02"
 composeUiTestJUnit4 = "1.3.1"
 daggerHilt = "2.43.2"
@@ -21,22 +21,21 @@ espresso-core = "3.5.0"
 firebaseBom = "31.0.2"
 glance = "1.0.0-alpha05"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.0.0-alpha09"
+gradlePlugins-agp = "8.0.0-alpha11"
 gradlePlugins-crashlytics = "2.9.2"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.14"
 gradlePlugins-hilt = "2.43.2"
-gradlePlugins-junit5 = "1.8.2.1"
 gradlePlugins-kotlinter = "3.12.0"
-gradlePlugins-ksp = "1.7.10-1.0.6"
+gradlePlugins-ksp = "1.7.20-1.0.6"
 gradlePlugins-protobuf = "0.9.1"
 gradlePlugins-shot = "5.14.1"
 gradlePlugins-versionCatalog = "0.7.0"
 gradlePlugins-versionsBenManes = "0.43.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
-junit = "5.9.1"
-kotlin = "1.7.10"
+junit = "4.13.2"
+kotlin = "1.7.20"
 kotlinxCoroutinesTest = "1.6.4"
 lifecycle = "2.6.0-alpha03"
 navigationCompose = "2.5.3"
@@ -99,8 +98,7 @@ google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
 google-protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobuf" }
 jakes-timber-timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
+junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 
 [bundles]
@@ -165,7 +163,6 @@ room = [
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradlePlugins-agp" }
-android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "gradlePlugins-junit5" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "gradlePlugins-crashlytics" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "gradlePlugins-detekt" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "gradlePlugins-gms" }
