--- a/.github/workflows/buildbot.yml
+++ b/.github/workflows/buildbot.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Check with Gradle
@@ -42,6 +43,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run tests with Gradle
