--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,13 +21,14 @@ espresso-core = "3.5.0"
 firebaseBom = "31.0.2"
 glance = "1.0.0-alpha05"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.1.0-alpha01"
+gradlePlugins-agp = "8.0.0-beta01"
 gradlePlugins-crashlytics = "2.9.2"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.14"
 gradlePlugins-hilt = "2.43.2"
 gradlePlugins-kotlinter = "3.12.0"
 gradlePlugins-ksp = "1.7.20-1.0.6"
+gradlePlugins-licensee = "1.6.0"
 gradlePlugins-protobuf = "0.9.1"
 gradlePlugins-shot = "5.14.1"
 gradlePlugins-versionCatalog = "0.7.0"
@@ -172,6 +173,7 @@ kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "gradlePlugins-kotlinter" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "gradlePlugins-ksp" }
+licensee = { id = "app.cash.licensee", version.ref = "gradlePlugins-licensee" }
 protobuf = { id = "com.google.protobuf", version.ref = "gradlePlugins-protobuf" }
 shot = { id = "shot", version.ref = "gradlePlugins-shot" }
 versionCatalogUpdate = { id = "nl.littlerobots.version-catalog-update", version.ref = "gradlePlugins-versionCatalog" }
