--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidxTestOrchestrator = "1.4.2"
 androidxTestRules = "1.5.0"
 androidxTestServices = "1.4.2"
 appCompat = "1.5.1"
+arrow = "1.1.2"
 assertk = "0.25"
 coil = "2.2.2"
 compose = "1.3.1"
@@ -82,6 +83,7 @@ androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.re
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTestRules" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
+arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
 coilKt-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 com-android-tools-desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
