--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 accompanist = "0.28.0"
-activityCompose = "1.8.0-alpha02"
-androidxFragment = "1.5.5"
+activityCompose = "1.7.0-alpha02"
+androidxFragment = "1.5.1"
 androidxTest = "1.5.0"
-androidxTestExtJUnit = "1.1.5"
+androidxTestExtJUnit = "1.1.4"
 androidxTestOrchestrator = "1.4.2"
 androidxTestRules = "1.5.0"
 androidxTestServices = "1.4.2"
-appCompat = "1.6.1"
+appCompat = "1.5.1"
 arrow = "1.1.2"
 assertk = "0.25"
 coil = "2.2.2"
-compose = "1.3.3"
-composeCompiler = "1.4.3"
-composeMaterial3 = "1.1.0-alpha08"
-composeUiTestJUnit4 = "1.3.3"
+compose = "1.3.1"
+composeCompiler = "1.3.2"
+composeMaterial3 = "1.1.0-alpha02"
+composeUiTestJUnit4 = "1.3.1"
 daggerHilt = "2.43.2"
 datastore = "1.0.0"
-desugar = "2.0.2"
-espresso-core = "3.5.1"
-firebaseBom = "31.2.3"
+desugar = "2.0.0"
+espresso-core = "3.5.0"
+firebaseBom = "31.0.2"
 glance = "1.0.0-alpha05"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.1.0-alpha09"
+gradlePlugins-agp = "8.1.0-alpha02"
 gradlePlugins-crashlytics = "2.9.2"
 gradlePlugins-detekt = "1.21.0"
 gradlePlugins-gms = "4.3.14"
 gradlePlugins-hilt = "2.43.2"
 gradlePlugins-kotlinter = "3.12.0"
-gradlePlugins-kotlinxSerialization = "1.8.10"
-gradlePlugins-ksp = "1.8.10-1.0.9"
+gradlePlugins-kotlinxSerialization = "1.7.20"
+gradlePlugins-ksp = "1.7.20-1.0.6"
 gradlePlugins-licensee = "1.6.0"
 gradlePlugins-protobuf = "0.9.1"
 gradlePlugins-shot = "5.14.1"
@@ -38,14 +38,14 @@ gradlePlugins-versionsBenManes = "0.43.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
-kotlin = "1.8.10"
+kotlin = "1.7.20"
 kotlinxCoroutinesTest = "1.6.4"
 kotlinxSerialization = "1.4.1"
-lifecycle = "2.6.0"
+lifecycle = "2.6.0-alpha03"
 navigationCompose = "2.5.3"
 protobuf = "3.21.9"
-room = "2.5.0"
-splashscreen = "1.1.0-alpha01"
+room = "2.5.0-beta02"
+splashscreen = "1.0.0-rc01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
