--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,72 +1,71 @@
 [versions]
-accompanist = "0.28.0"
-activityCompose = "1.7.0-alpha02"
-androidxFragment = "1.5.1"
+accompanist = "0.30.1"
+activityCompose = "1.8.0-alpha04"
+androidxFragment = "1.5.7"
 androidxTest = "1.5.0"
-androidxTestExtJUnit = "1.1.4"
+androidxTestExtJUnit = "1.1.5"
 androidxTestOrchestrator = "1.4.2"
 androidxTestRules = "1.5.0"
 androidxTestServices = "1.4.2"
-appCompat = "1.5.1"
-arrow = "1.1.2"
-assertk = "0.25"
-coil = "2.2.2"
-compose = "1.3.1"
-composeCompiler = "1.3.2"
-composeMaterial3 = "1.1.0-alpha02"
-composeUiTestJUnit4 = "1.3.1"
-daggerHilt = "2.43.2"
+appCompat = "1.6.1"
+arrow = "1.1.5"
+assertk = "0.26.1"
+coil = "2.4.0"
+compose = "1.4.3"
+composeMaterial3 = "1.2.0-alpha02"
+composeUiTestJUnit4 = "1.4.3"
+daggerHilt = "2.46.1"
 datastore = "1.0.0"
-desugar = "2.0.0"
-espresso-core = "3.5.0"
-firebaseBom = "31.0.2"
-glance = "1.0.0-alpha05"
+desugar = "2.0.3"
+espresso-core = "3.5.1"
+firebaseBom = "32.1.0"
+glance = "1.0.0-beta01"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.1.0-alpha02"
-gradlePlugins-crashlytics = "2.9.2"
-gradlePlugins-detekt = "1.21.0"
-gradlePlugins-gms = "4.3.14"
-gradlePlugins-hilt = "2.43.2"
-gradlePlugins-kotlinter = "3.12.0"
-gradlePlugins-kotlinxSerialization = "1.7.20"
-gradlePlugins-ksp = "1.7.20-1.0.6"
-gradlePlugins-licensee = "1.6.0"
-gradlePlugins-protobuf = "0.9.1"
+gradlePlugins-agp = "8.2.0-alpha06"
+gradlePlugins-crashlytics = "2.9.5"
+gradlePlugins-detekt = "1.23.0"
+gradlePlugins-gms = "4.3.15"
+gradlePlugins-hilt = "2.46.1"
+gradlePlugins-kotlinter = "3.15.0"
+gradlePlugins-kotlinxSerialization = "1.8.21"
+gradlePlugins-ksp = "1.7.20-1.0.8"
+gradlePlugins-licensee = "1.7.0"
+gradlePlugins-protobuf = "0.9.3"
 gradlePlugins-shot = "5.14.1"
-gradlePlugins-versionCatalog = "0.7.0"
-gradlePlugins-versionsBenManes = "0.43.0"
+gradlePlugins-versionCatalog = "0.8.0"
+gradlePlugins-versionsBenManes = "0.46.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
-kotlin = "1.7.20"
-kotlinxCoroutinesTest = "1.6.4"
-kotlinxSerialization = "1.4.1"
-lifecycle = "2.6.0-alpha03"
+kotlin = "1.8.21"
+kotlinxCoroutinesTest = "1.7.1"
+kotlinxSerialization = "1.5.1"
+lifecycle = "2.6.1"
 navigationCompose = "2.5.3"
-protobuf = "3.21.9"
-room = "2.5.0-beta02"
-splashscreen = "1.0.0-rc01"
+protobuf = "3.23.2"
+room = "2.6.0-alpha01"
+splashscreen = "1.1.0-alpha01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
 [libraries]
 androidx-activity-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
-androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+androidx-compose-foundation = "androidx.compose.foundation:foundation:1.5.0-beta01"
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 androidx-compose-material3WindowSizeClass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "composeMaterial3" }
 androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
 androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "compose" }
-androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+androidx-compose-ui = "androidx.compose.ui:ui:1.5.0-beta01"
 androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "composeUiTestJUnit4" }
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
-androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
+androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-hilt-hiltCommon = { module = "androidx.hilt:hilt-common", version.ref = "hilt" }
 androidx-hilt-hiltCompiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt" }
 androidx-hilt-hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
@@ -91,14 +90,14 @@ google-accompanistFlowLayout = { module = "com.google.accompanist:accompanist-fl
 google-accompanistNavAnimations = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 google-accompanistNavMaterial = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
 google-accompanistPermissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-google-accompanistTestHarness = { module = "com.google.accompanist:accompanist-testharness", version.ref = "accompanist" }
 google-accompanistSystemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+google-accompanistTestHarness = { module = "com.google.accompanist:accompanist-testharness", version.ref = "accompanist" }
+google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version.ref = "glance-tools" }
+google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version.ref = "glance-tools" }
 google-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "daggerHilt" }
 google-dagger-daggerCompiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerHilt" }
 google-dagger-hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "daggerHilt" }
 google-dagger-hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
-google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version.ref = "glance-tools" }
-google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version.ref = "glance-tools" }
 google-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
@@ -176,8 +175,8 @@ googleServices = { id = "com.google.gms.google-services", version.ref = "gradleP
 hilt = { id = "dagger.hilt.android.plugin", version.ref = "gradlePlugins-hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "gradlePlugins-kotlinter" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "gradlePlugins-ksp" }
 licensee = { id = "app.cash.licensee", version.ref = "gradlePlugins-licensee" }
 protobuf = { id = "com.google.protobuf", version.ref = "gradlePlugins-protobuf" }
