I DO NOT KNOW HOW BUT IT RUNS TESTS

--- a/app/src/androidTest/AndroidManifest.xml
+++ b/app/src/androidTest/AndroidManifest.xml
@@ -7,6 +7,9 @@
             android:required="false" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <queries>
         <package android:name="androidx.test.services" />
     </queries>
