--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options\="-Xmx4g"
 kotlin.code.style=official
 android.useAndroidX=true
+android.experimental.androidTest.enableEmulatorControl=true
