--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,26 @@
 [versions]
-accompanist = "0.28.0"
+accompanist = "0.30.1"
 activityCompose = "1.7.0-alpha02"
 androidxFragment = "1.5.1"
 androidxTest = "1.5.0"
-androidxTestExtJUnit = "1.1.4"
+androidxTestExtJUnit = "1.1.5"
 androidxTestOrchestrator = "1.4.2"
-androidxTestRules = "1.5.0"
+androidxTestRules = "1.6.0-alpha01"
 androidxTestServices = "1.4.2"
 appCompat = "1.5.1"
 arrow = "1.1.2"
 assertk = "0.25"
 coil = "2.2.2"
-compose = "1.3.1"
-composeCompiler = "1.3.2"
+compose = "1.4.3"
+composeCompiler = "1.4.7"
 composeMaterial3 = "1.1.0-alpha02"
-composeUiTestJUnit4 = "1.3.1"
+composeUiTestJUnit4 = "1.5.0-beta01"
 daggerHilt = "2.43.2"
 datastore = "1.0.0"
-desugar = "2.0.0"
-espresso-core = "3.5.0"
+desugar = "2.0.3"
+espresso-core = "3.5.1"
+espresso-device = "1.0.0-alpha05"
+espresso-runner = "1.4.0"
 firebaseBom = "31.0.2"
 glance = "1.0.0-alpha05"
 glance-tools = "0.2.2"
@@ -29,7 +31,7 @@ gradlePlugins-gms = "4.3.14"
 gradlePlugins-hilt = "2.43.2"
 gradlePlugins-kotlinter = "3.12.0"
 gradlePlugins-kotlinxSerialization = "1.7.20"
-gradlePlugins-ksp = "1.7.20-1.0.6"
+gradlePlugins-ksp = "1.8.21-1.0.11"
 gradlePlugins-licensee = "1.6.0"
 gradlePlugins-protobuf = "0.9.1"
 gradlePlugins-shot = "5.14.1"
@@ -38,7 +40,7 @@ gradlePlugins-versionsBenManes = "0.43.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
-kotlin = "1.7.20"
+kotlin = "1.8.21"
 kotlinxCoroutinesTest = "1.6.4"
 kotlinxSerialization = "1.4.1"
 lifecycle = "2.6.0-alpha03"
@@ -76,11 +78,14 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-tracing = { module = "androidx.tracing:tracing", version = "1.1.0" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
+androidx-test-espresso-device = { module = "androidx.test.espresso:espresso-device", version.ref = "espresso-device" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExtJUnit" }
 androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidxTestOrchestrator" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTestRules" }
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "espresso-runner" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
