--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -16,21 +16,19 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: 'gradle'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      
+      - uses: android-actions/setup-android@v2
+        name: Set up Android SDK
+
       - name: Check for dependency updates
-        uses: eskatos/gradle-command-action@v1.3.3
+        uses: gradle/gradle-command-action@v2
         with:
           arguments: versionCatalogUpdate --no-daemon
+
       # Prevent the change to gradlew to be included in the PR
       - name: Revert gradlew change
         run: git checkout gradlew
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
