--- a/.github/workflows/buildbot.yml
+++ b/.github/workflows/buildbot.yml
@@ -12,19 +12,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/checkout@v3
+      
+      - uses: android-actions/setup-android@v2
+        name: Set up Android SDK
+
+      - name: Check for dependency updates
+        uses: gradle/gradle-command-action@v2
         with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: 'gradle'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Check with Gradle
-        uses: eskatos/gradle-command-action@v1.3.3
-        with:
-          arguments: app:staticAnalysis app:collectSarifReports --continue --no-daemon
+          arguments: app:staticAnalysis app:collectSarifReports --continue
+
       - name: Upload SARIF to Github using the upload-sarif action
         uses: github/codeql-action/upload-sarif@v1
         if: ${{ always() }}
@@ -36,17 +33,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: 'gradle'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        uses: actions/checkout@v3
+      
+      - uses: android-actions/setup-android@v2
+        name: Set up Android SDK
+
       - name: Run tests with Gradle
-        uses: eskatos/gradle-command-action@v1.3.3
+        uses: gradle/gradle-command-action@v2
         with:
           arguments: test --continue --no-daemon
