--- a/.github/workflows/buildbot.yml
+++ b/.github/workflows/buildbot.yml
@@ -13,7 +13,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: corretto
+
       - uses: android-actions/setup-android@v2
         name: Set up Android SDK
 
@@ -33,14 +39,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: corretto
+
       - uses: android-actions/setup-android@v2
         name: Set up Android SDK
 
       - name: Run tests with Gradle
         uses: gradle/gradle-command-action@v2
         with:
-          arguments: test --continue --no-daemon
+          arguments: test --continue
