--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -16,14 +16,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-      
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: corretto
+
       - uses: android-actions/setup-android@v2
         name: Set up Android SDK
 
       - name: Check for dependency updates
         uses: gradle/gradle-command-action@v2
         with:
-          arguments: versionCatalogUpdate --no-daemon
+          arguments: versionCatalogUpdate
 
       # Prevent the change to gradlew to be included in the PR
       - name: Revert gradlew change
