--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,53 +1,53 @@
 [versions]
-accompanist = "0.30.1"
-activityCompose = "1.7.0-alpha02"
-androidxFragment = "1.5.1"
+accompanist = "0.32.0"
+activityCompose = "1.7.2"
+androidxFragment = "1.6.1"
 androidxTest = "1.5.0"
 androidxTestExtJUnit = "1.1.5"
 androidxTestOrchestrator = "1.4.2"
 androidxTestRules = "1.6.0-alpha01"
 androidxTestServices = "1.4.2"
-appCompat = "1.5.1"
+appCompat = "1.6.1"
 arrow = "1.1.2"
 assertk = "0.25"
 coil = "2.2.2"
-compose = "1.4.3"
-composeCompiler = "1.4.7"
-composeMaterial3 = "1.1.0-alpha02"
-composeUiTestJUnit4 = "1.5.0-beta01"
-daggerHilt = "2.43.2"
+compose = "1.5.1"
+composeCompiler = "1.5.3"
+composeMaterial3 = "1.1.1"
+composeUiTestJUnit4 = "1.5.1"
+daggerHilt = "2.48"
 datastore = "1.0.0"
 desugar = "2.0.3"
 espresso-core = "3.5.1"
 espresso-device = "1.0.0-alpha05"
-espresso-runner = "1.4.0"
-firebaseBom = "31.0.2"
-glance = "1.0.0-alpha05"
+espresso-runner = "1.5.2"
+firebaseBom = "32.2.3"
+glance = "1.0.0"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.2.0-alpha08"
-gradlePlugins-crashlytics = "2.9.2"
-gradlePlugins-detekt = "1.21.0"
-gradlePlugins-gms = "4.3.14"
-gradlePlugins-hilt = "2.43.2"
-gradlePlugins-kotlinter = "3.12.0"
-gradlePlugins-kotlinxSerialization = "1.7.20"
-gradlePlugins-ksp = "1.8.21-1.0.11"
-gradlePlugins-licensee = "1.6.0"
-gradlePlugins-protobuf = "0.9.1"
+gradlePlugins-agp = "8.3.0-alpha03"
+gradlePlugins-crashlytics = "2.9.9"
+gradlePlugins-detekt = "1.23.1"
+gradlePlugins-gms = "4.3.15"
+gradlePlugins-hilt = "2.48"
+gradlePlugins-kotlinter = "3.16.0"
+gradlePlugins-kotlinxSerialization = "1.8.21"
+gradlePlugins-ksp = "1.9.10-1.0.13"
+gradlePlugins-licensee = "1.7.0"
+gradlePlugins-protobuf = "0.9.4"
 gradlePlugins-shot = "5.14.1"
 gradlePlugins-versionCatalog = "0.7.0"
-gradlePlugins-versionsBenManes = "0.43.0"
+gradlePlugins-versionsBenManes = "0.47.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
-kotlin = "1.8.21"
-kotlinxCoroutinesTest = "1.6.4"
-kotlinxSerialization = "1.4.1"
-lifecycle = "2.6.0-alpha03"
-navigationCompose = "2.5.3"
+kotlin = "1.9.10"
+kotlinxCoroutinesTest = "1.7.1"
+kotlinxSerialization = "1.5.0"
+lifecycle = "2.6.2"
+navigationCompose = "2.7.2"
 protobuf = "3.21.9"
-room = "2.5.0-beta02"
-splashscreen = "1.0.0-rc01"
+room = "2.5.2"
+splashscreen = "1.0.1"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
