--- a/build-config/detekt.yml
+++ b/build-config/detekt.yml
@@ -102,7 +102,7 @@ style:
     includeLineWrapping: false
   ForbiddenComment:
     active: true
-    values: [ 'STOPSHIP' ]
+    comments: [ 'STOPSHIP' ]
     allowedPatterns: ''
   LoopWithTooManyJumpStatements:
     active: true
