--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ arrow = "1.1.2"
 assertk = "0.25"
 coil = "2.2.2"
 compose = "1.5.1"
-composeCompiler = "1.5.3"
+composeCompiler = "1.5.14"
 composeMaterial3 = "1.1.1"
 composeUiTestJUnit4 = "1.5.1"
 daggerHilt = "2.48"
@@ -24,7 +24,7 @@ espresso-runner = "1.5.2"
 firebaseBom = "32.2.3"
 glance = "1.0.0"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.4.0-alpha09"
+gradlePlugins-agp = "8.4.2"
 gradlePlugins-crashlytics = "2.9.9"
 gradlePlugins-detekt = "1.23.1"
 gradlePlugins-gms = "4.3.15"
@@ -40,7 +40,7 @@ gradlePlugins-versionsBenManes = "0.47.0"
 hilt = "1.0.0"
 hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
-kotlin = "1.9.10"
+kotlin = "1.9.24"
 kotlinxCoroutinesTest = "1.7.1"
 kotlinxSerialization = "1.5.0"
 lifecycle = "2.6.2"
@@ -182,6 +182,7 @@ googleServices = { id = "com.google.gms.google-services", version.ref = "gradleP
 hilt = { id = "dagger.hilt.android.plugin", version.ref = "gradlePlugins-hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+paparazzi = { id = "app.cash.paparazzi", version = "1.3.4" }
 kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "gradlePlugins-kotlinter" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "gradlePlugins-ksp" }
