Upgrade to AGP 8.4.2 / Gradle 8.6 stable

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ espresso-runner = "1.5.2"
 firebaseBom = "32.2.3"
 glance = "1.0.0"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.4.0-alpha09"
+gradlePlugins-agp = "8.4.2"
 gradlePlugins-crashlytics = "2.9.9"
 gradlePlugins-detekt = "1.23.1"
 gradlePlugins-gms = "4.3.15"
